--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
+<!DOCTYPE>
 <html>
-  <head>
-   <title>
-  </title>
-      </head>
   <body>
-    </hr>
-    test githup
-  <table border="1px">
-<tr>
-<?php
-for($i = 1; $i < 10; $i ++) {
-    echo "<td>";
-    for($j = 1; $j <= 10; $j ++) {
-        echo "$i x $j = " . ($i * $j);
-        echo "<br>";
-    }
-    echo "</td>";
-}
-?>
-</tr>
-</table>
-    </body>
-  
-  </html>
+    <?php
+      echo "<h2>Hello PHP</h2>";
+    ?>
+  </body>
+</html>
